--- a/jspsych-image-resize-response.html
+++ b/jspsych-image-resize-response.html
@@ -11,7 +11,7 @@
 
 var test = {
   type: 'image-resize-response2',
-  stimulus: 'img/stick.png',
+  stimulus: 'stick.png',
   stim_width: 20,
   stim_height: 150,
   prompt: "<p>Rotate the stimulus as preferred.</p>",
