--- a/jspsych-image-resize-response.html
+++ b/jspsych-image-resize-response.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../js/jspsych.js"></script>
-    <script src="../plugins/jspsych-image-resize-response.js"></script>
-    <script src="../plugins/jspsych-image-resize-response2.js"></script>
-    <link rel="stylesheet" href="../css/jspsych.css">
+    <script src="jspsych.js"></script>
+    <script src="jspsych-image-resize-response.js"></script>
+    <script src="jspsych-image-resize-response2.js"></script>
+    <link rel="stylesheet" href="jspsych.css">
   </head>
   <body></body>
   <script>
